<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="hr.fer.android.hw0036488109.ivanovaaplikacija.FormActivity">

    <ImageView
        android:id="@+id/avatar"
        android:contentDescription="@string/imageView_content_description"
        android:layout_margin="@dimen/margin"
        android:layout_width="@dimen/image_width_height"
        android:layout_height="@dimen/image_width_height" />

    <TextView
        android:textAlignment="center"
        android:id="@+id/firstName"
        android:layout_margin="@dimen/margin"
        android:layout_width="@dimen/textView_width"
        android:layout_height="wrap_content" />

    <TextView
        android:textAlignment="center"
        android:id="@+id/lastName"
        android:layout_margin="@dimen/margin"
        android:layout_width="@dimen/textView_width"
        android:layout_height="wrap_content" />

    <TextView
        android:textAlignment="center"
        android:id="@+id/phoneNumber"
        android:layout_margin="@dimen/margin"
        android:layout_width="@dimen/textView_width"
        android:layout_height="wrap_content" />

    <TextView
        android:textAlignment="center"
        android:id="@+id/email"
        android:layout_margin="@dimen/margin"
        android:layout_width="@dimen/textView_width"
        android:layout_height="wrap_content" />

    <TextView
        android:textAlignment="center"
        android:id="@+id/spouse"
        android:layout_margin="@dimen/margin"
        android:layout_width="@dimen/textView_width"
        android:layout_height="wrap_content" />

    <TextView
        android:textAlignment="center"
        android:id="@+id/age"
        android:layout_margin="@dimen/margin"
        android:layout_width="@dimen/textView_width"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/pathInput"
        android:layout_marginTop="@dimen/margin"
        android:textAlignment="center"
        android:hint="@string/form_header"
        android:layout_width="@dimen/textView_width"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/loadButton"
        android:text="@string/form_button_text"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content" />

</TableLayout>
